# misinfocounter

./: .env-example  .gitignore  README.md  data_exploration.ipynb  pyproject.toml
cli/: __init__.py  commands.py
client/: mongo_client.py  openai_client.py
config/: __init__.py
counternews/: generate_counter.py
data_analysis/: mongo_data.py  send_data_to_mongo.py  simplified_sentiment_analyzer.py  topic_counter.py
models/: article_model.py
prompts/system_prompts/: topic_extraction.prompt
prompts/user_prompts/: sentiment_analyzer.prompt  topic_extraction.prompt
topic_models/: news_source_topic_model.py
